# december3-club-app

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  NEXT-DAY-PLAN.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/routers/: auth.py  captioning.py  carers.py  events.py  features.py  feed.py  health.py  identity.py  marketplace.py  moderation.py  profiles.py  readability.py  scam.py  voice.py  writing.py
api/app/schemas/: moderation.py
api/app/services/: gemini.py
caddy/: Caddyfile
db/init/: 001_init.sql
docs/: ARCHITECTURE.md  FEATURES.md
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/carers/: page.tsx
web/src/app/compose/: page.tsx
web/src/app/events/: page.tsx
web/src/app/marketplace/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/status/: page.tsx
web/src/components/: Nav.tsx  Placeholder.tsx  ui.tsx
web/src/lib/: api.ts
